<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.auth.RegisterFragment">

        <ImageView
            android:id="@+id/img_cover"
            android:layout_width="170dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/profile"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_cover"
            android:layout_centerHorizontal="true"
            android:padding="15dp"
            android:text="My Account"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/icon_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_in"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="-33dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/back_icon_edit"
            android:elevation="@dimen/_15sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_edit" />

        <LinearLayout
            android:id="@+id/register_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon_edit"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/register_person_name_txt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/account_editText_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_person"
                    android:drawablePadding="10dp"
                    android:tooltipText="Name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/register_email_txt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/account_editText_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:tooltipText="Name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/register_phone_txt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/account_editText_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_phone"
                    android:drawablePadding="10dp"
                    android:inputType="numberSigned" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/change_password_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Change Your Password"
                android:layout_gravity="end"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:padding="@dimen/_10sdp"/>


        </LinearLayout>

        <Button
            android:id="@+id/account_btn_set_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_linearlayout"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:text="Set up" />


    </RelativeLayout>
</ScrollView>
